# anchor_dope

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  README_PROYECTO.md  pyproject.toml
.sisyphus/plans/: architectural-realignment.md
docs/: CONTRIBUTING.md  RUNBOOK.md
docs/superpowers/plans/: 2026-03-22-utils-simplification-implementation-plan.md
docs/superpowers/specs/: 2026-03-22-utils-simplification-design.md
scripts/: AGENTS.md  doctor.sh  lint.sh  new_sprint_pack.sh  spk
scripts/reviewctl-wrappers/: reviewctl-wrapper.fish  reviewctl-wrapper.sh
scripts/shared/: utils.sh
src/: __init__.py  utils.py
templates/: AGENTS.md
templates/sprint_base/: AGENTS.md.tmpl  ANCHOR.md.tmpl  PRIME.md.tmpl  SKILL.md.tmpl
tests/: AGENTS.md  run_all.sh  verify_creation.sh  verify_doctor.sh  verify_doctor_integration.sh  verify_lint.sh  verify_lint_paths.sh  verify_plan_creation.sh  verify_plan_doctor.sh  verify_utils.sh  verify_validation.sh
tests/test/python/: test_utils.py
